--- a/main.css
+++ b/main.css
@@ -78,6 +78,7 @@ a:hover {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 3fr;
     grid-area: 1 / 6 / 5 / 21;
+    box-shadow: 0px 2px 5px rgb(201, 201, 201);
 }
 
 .top-bar {
@@ -85,7 +86,6 @@ a:hover {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 2px 5px rgb(201, 201, 201);
 }
 
 .search-bar {
@@ -164,22 +164,46 @@ textarea:focus, input:focus {
 }
 
 .top-content {
-    border: 1px solid black;
     grid-area: 1 / 1 / 3 / 21;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    padding-left: 1.5rem;
+    gap: 42rem;
+    font-size: .85rem;
 }
 
 .announcement {
-    border: 1px solid black;
     grid-area: 3 / 14 / 12 / 21;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.trending {
-    border: 1px solid black;
-    grid-area: 12 / 14 / 21 / 21;
+.announcement-card {
+    border-radius: 1rem;
+    background-color: white;
+    box-shadow: 0px 2px 5px rgb(201, 201, 201);
+    padding: 2.5rem;
+}
+
+.announcement-card h1 {
+    font-size: 1rem;
+}
+
+.announcement-card p {
+    font-size: .9rem;
+    line-height: .9rem;
+}
+
+.break {
+    color: grey;
+    background-color: grey;
+    width: 95%;
+    height: 1px;
 }
 
 .cards {
-    border: 1px solid black;
     grid-area: 3 / 1 / 21 / 14;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -198,7 +222,6 @@ textarea:focus, input:focus {
 }
 
 .bio {
-    border: 1px solid black;
     height: 60%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -208,6 +231,30 @@ textarea:focus, input:focus {
 }
 
 .card-buttons {
-    border: 1px solid black;
     height: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 1.5rem;
+    gap: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.trending {
+
+    grid-area: 12 / 14 / 21 / 21;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+}
+
+
+.trending-card {
+    background-color: white;
+    border-radius: 1rem;
+    box-shadow: 0px 2px 5px rgb(201, 201, 201);
+    height: 80%;
+    width: 98%;
 }
