--- a/main.css
+++ b/main.css
@@ -184,7 +184,7 @@ textarea:focus, input:focus {
     border-radius: 1rem;
     background-color: white;
     box-shadow: 0px 2px 5px rgb(201, 201, 201);
-    padding: 2.5rem;
+    padding: 1.9rem;
 }
 
 .announcement-card h1 {
@@ -193,6 +193,7 @@ textarea:focus, input:focus {
 
 .announcement-card p {
     font-size: .9rem;
+    color: rgb(97, 97, 97);
     line-height: .9rem;
 }
 
@@ -246,7 +247,6 @@ textarea:focus, input:focus {
     grid-area: 12 / 14 / 21 / 21;
     display: flex;
     flex-direction: column;
-
     align-items: center;
 }
 
@@ -255,6 +255,38 @@ textarea:focus, input:focus {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0px 2px 5px rgb(201, 201, 201);
-    height: 80%;
-    width: 98%;
+    height: 73.5%;
+    width: 90%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.users {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.user-tags {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.user-tags p {
+    margin: 0;
+    padding: 0;
+}
+
+.user-tags p:first-child {
+    padding-bottom: 4px;
+}
+
+.user-tags p:last-child{
+    color: gray;
+
 }
